<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/login_username"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:hint="@string/username"
            android:gravity="center"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/login_password"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:gravity="center"/>

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_margin="30dp"
            android:width="150dp"
            android:background="@color/colorAccent"/>

    </LinearLayout>

</LinearLayout>